Fixed problem with overlap and coulmn height

--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,19 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+
 	text-decoration: none;
 	list-style: none;
 	color: white;
+
 	font-family: "Trebuchet MS";
 }
 body {
 	background-image: linear-gradient(180deg, blue, purple);
-	width: 100%;
+	justify-content: center;
+	max-width: 100%;
+	border-radius: 10px;
+	overflow: hidden;
 }
 #logo {
 	display: flex;
@@ -32,12 +37,14 @@ nav {
 	display: flex;
 	justify-content: space-evenly;
 	margin: 10px;
+	max-width: 100%;
+	max-height: 100%;
 	visibility: hidden;
 	animation: move-down 1s ease-in-out;
 	animation-fill-mode: forwards;
 }
 .btn1 {
-	background-color: orangered !important;
+	background-color: orangered;
 	padding: 10px;
 	border-radius: 5px;
 	border: none;
@@ -55,27 +62,37 @@ li {
 	margin: 10px;
 }
 main {
-	display: inline-block;
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	grid-template-rows: repeat(2, 1fr);
 	justify-self: center;
 	align-items: center;
-	width: 100%;
+	max-width: 100%;
+	max-height: 100%;
 	bottom: 0px;
+	justify-content: space-between;
 }
 
 .paragraph {
+	grid-column: 1/9;
+	grid-row: 1/2;
 	text-align: center;
-	width: 60%;
-	margin: 20px 20px 0px 20%;
+	width: 50%;
+	line-height: 0.8;
+	margin: 10px 20px 0px 25%;
 	visibility: hidden;
 	animation: move-down 1s ease-in-out;
 	animation-fill-mode: forwards;
 	bottom: 0;
 }
 .images {
-	display: inline-flex;
-	align-items: baseline;
-	gap: 10px;
+	display: grid;
+	grid-row: 2/2;
 	width: 100%;
+	grid-column: 1/7;
+
+	gap: 10px;
+	bottom: 0;
 }
 @keyframes move-up {
 	0% {
@@ -87,15 +104,24 @@ main {
 		visibility: visible;
 	}
 }
-.images img {
-	float: right;
+.col {
+	position: relative;
 	width: 100%;
-
+	grid-row: 2/2;
+	margin-top: 15.4rem;
+	gap: 10px;
+}
+.col img {
+	position: absolute;
+	bottom: 0;
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	border-radius: 10px;
 	animation: move-up 1s ease-in-out;
 }
-
 #image1 {
-	height: 450px;
+	height: 370px;
 }
 #image2 {
 	height: 300px;
@@ -107,5 +133,5 @@ main {
 	height: 300px;
 }
 #image5 {
-	height: 450px;
+	height: 370px;
 }
